# pulse

./: .gitignore  .pre-commit-config.yaml  .prettierrc  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: backend.yml  dbt.yml  frontend.yml
.local/: local.env.template
devops/: push_docker_image.py  run_pipeline_locally.py
devops/database_helpers/: __init__.py  add_team.py  add_team_members.py  helpers.py
devops/docker/: Dockerfile.app  Dockerfile.pipe
infra/: backend.tf  cloud_run.tf  docker.tf  main.tf  service_account.tf  variables.tf
src/: alembic.ini
src/common/: __init__.py  logger.py
src/data-pipeline/: README.md  run_pipeline.py  task_scheduler.py
src/data-pipeline/analytics/: .user.yml  README.md  dbt_project.yml  package-lock.yml  profiles.yml
src/data-pipeline/analytics/models/00_base/: _src.yml
src/data-pipeline/analytics/models/00_base/asana/: base_asana__project_tasks_custom_fields.sql  base_asana__project_tasks_custom_fields_enum_options.sql  base_asana__project_tasks_custom_fields_multi_enum_values.sql
src/data-pipeline/analytics/models/00_base/backend/: base__teams.sql
src/data-pipeline/analytics/models/00_base/freshdesk/: base_freshdesk__tickets.sql  base_freshdesk__tickets_cc_emails.sql  base_freshdesk__tickets_ticket_cc_emails.sql
src/data-pipeline/analytics/models/00_base/github/: base_github__pull_request_assignees.sql  base_github__pull_request_labels.sql
src/data-pipeline/analytics/models/01_staging/: _stg.yml
src/data-pipeline/analytics/models/01_staging/01/: stg__01__asana.sql  stg__01__freshdesk.sql  stg__01__github.sql
src/data-pipeline/analytics/models/01_staging/02/: stg__02__all_pull_requests.sql  stg__02__ic_metrics.sql
src/data-pipeline/load/: config.py  main.py
src/data-pipeline/load/sources/: __init__.py  base.py  dlt_asana.py  dlt_freshdesk.py  dlt_github.py
src/data_pipeline/: README.md  run_pipeline.py  task_scheduler.py
src/data_pipeline/analytics/: dbt_project.yml
src/data_pipeline/analytics/models/02_marts/: cln__metrics.sql
src/data_pipeline/load/sources/: base.py  dlt_asana.py
src/migrations/: env.py
src/migrations/versions/: 2026_04_03_0e031f0d6057_add_active_flag.py  2026_04_03_2003ac400242_uuid_pks.py  2026_04_03_2bf505c44976_fill_out_team_member_info.py  2026_04_03_4490a6a0ed5b_drop_user_id.py  2026_04_03_b54d61b8d61b_add_username.py  2026_04_03_cd6a929880bb_add_team_metadata.py  2026_04_03_f9b0ec193f4b_hello_world.py  2026_04_16_3b6b3ab58923_add_maintenance_shift.py
src/web-app/: README.md
src/web-app/backend/: models.py
src/web_app/: README.md  dummy.css  theme.yaml
src/web_app/backend/: config.py  mock_data.py  models.py  server.py  wsgi.py
src/web_app/backend/routes/: __init__.py  api.py  helpers.py
src/web_app/frontend/src/: App.tsx  api.ts  index.css  types.ts
src/web_app/frontend/src/components/: ExpandedPanel.tsx  LabelInterface.tsx  NavBar.tsx  TeamMemberRow.tsx
src/web_app/frontend/src/hooks/: useDarkMode.ts  useTheme.ts
src/web_app/frontend/src/pages/: AddTeam.tsx  AddTeamMember.tsx  Dashboard.tsx
(+20 files in other folders)
